ADD - lc completed

--- a/html-intro/index.html
+++ b/html-intro/index.html
@@ -3,7 +3,81 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Intro HTML</title>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<div>
+				<div>header</div>
+			</div>
+		</header>
+
+		<main>
+			<h1>La mia prima pagina html</h1>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat totam
+				molestias inventore cumque illo nulla non dolore voluptas, voluptatum
+				ducimus? Iure delectus ab consequuntur laudantium, earum unde minima
+				temporibus tempora. Ho speso 25 <em>&euro;</em> .
+			</p>
+
+			<table>
+				<!-- intestazione tabella -->
+				<thead>
+					<tr>
+						<th>col 1</th>
+						<th>col 2</th>
+						<th>col 3</th>
+					</tr>
+				</thead>
+				<!-- corpo della tabella -->
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>2</td>
+						<td>3</td>
+					</tr>
+					<tr>
+						<td>&check;</td>
+						<td>&euro;</td>
+						<td>&cross;</td>
+					</tr>
+				</tbody>
+				<tfoot>
+					<tr>
+						<td>footer</td>
+						<td>footer</td>
+						<td>footer</td>
+					</tr>
+				</tfoot>
+			</table>
+
+			<div>
+				<ol>
+					<li>
+						primo elemento
+						<ul>
+							<li>ciao</li>
+							<li>ciao</li>
+							<li>
+								ciao
+								<ul>
+									<li>mamma</li>
+									<li>mamma</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<ul>
+						<li>babbo</li>
+						<li>babbo</li>
+					</ul>
+					<li>secondo elemento</li>
+					<li>terzo elemento</li>
+				</ol>
+			</div>
+		</main>
+
+		<footer>Gianluca Lomarco</footer>
+	</body>
 </html>
