ADD - app toolbar

--- a/correzioni/html-css-zoom/index.html
+++ b/correzioni/html-css-zoom/index.html
@@ -59,9 +59,9 @@
 							Polling
 						</div>
 					</li>
-					<li class="toolbar__item button">
+					<li class="toolbar__item button button--colored">
 						<div class="button__body">
-							<i class="fa-solid fa-video"></i>
+							<i class="fa-solid fa-share-from-square"></i>
 							Share Screen
 						</div>
 						<i class="fa-solid fa-chevron-up"></i>
