ADD - webcam grid

--- a/correzioni/html-css-zoom/index.html
+++ b/correzioni/html-css-zoom/index.html
@@ -21,7 +21,186 @@
 	</head>
 	<body class="debug">
 		<div id="app">
-			<main class="app__content"></main>
+			<main class="app__content">
+				<div class="webcam-wrapper">
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+					<div class="webcam">
+						<img
+							class="webcam__preview"
+							src="https://picsum.photos/300/300"
+							alt=""
+						/>
+						<span class="webcam__label">
+							<i class="fa-solid fa-microphone-slash"></i>
+							Mario rossi
+						</span>
+					</div>
+				</div>
+			</main>
 			<aside class="app__toolbar">
 				<ul class="toolbar">
 					<li class="toolbar__item button">
