ADD - plans section

--- a/correzioni/htmlcss-dropbox/index.html
+++ b/correzioni/htmlcss-dropbox/index.html
@@ -50,6 +50,7 @@
 
 		<!-- <div class="debug"></div> -->
 		<main class="page-content">
+			<!-- start hero -->
 			<section class="hero">
 				<div class="container-lg">
 					<div class="row">
@@ -79,6 +80,213 @@
 					</div>
 				</div>
 			</section>
+			<!-- end hero -->
+
+			<!-- start plan section -->
+			<!-- <div class="debug"></div> -->
+			<section class="plans">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<h2 class="title-lg">Trova il piano business che fa per te</h2>
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<ul class="bill-rate__selection">
+								<li class="bill-rate__group">
+									<input type="radio" checked name="bill-rate" />
+									<label for="">Fatturazione mensile</label>
+								</li>
+								<li class="bill-rate__group">
+									<input type="radio" name="bill-rate" />
+									<label for="">Fatturazione annuale</label>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<ul class="row plans-list">
+						<li class="col-4">
+							<div class="card card-plan">
+								<div class="card__header">
+									<i class="fa-solid fa-user"></i>Singolo
+								</div>
+								<div class="card__body">
+									<div class="card-plan__main-info">
+										<h3 class="card__title">Professional</h3>
+										<p>&euro; 12.00</p>
+										<p>/mese</p>
+									</div>
+									<ul class="features">
+										<li class="features__item">
+											<i class="fa-solid fa-user"></i>
+											1 utente
+										</li>
+										<li class="features__item">
+											<i class="fa-solid fa-folder"></i>
+											5 TB di spazio di archiviazione
+										</li>
+										<li class="features__item">
+											<i class="fa-solid fa-share-nodes"></i>
+											Funzioni di produttività premium e condivisione file
+											semplice e sicura
+										</li>
+									</ul>
+									<div class="card-plan__cta">
+										<a href="#" class="button">Prova gratis per 30 giorni</a>
+										<p>oppure <a href="#">acquista ora</a></p>
+									</div>
+									<div>
+										<h4 class="mb-10">Punti salienti del piano</h4>
+										<ul class="features blue-icons">
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Invia file fino a 100GB con Dropbox Transfert
+											</li>
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Cartelle offline su dispositivi mobile
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="col-4">
+							<div class="card card-plan">
+								<div class="card__header">
+									<i class="fa-solid fa-user"></i>Singolo
+								</div>
+								<div class="card__body">
+									<div class="card-plan__main-info">
+										<h3 class="card__title">Professional</h3>
+										<p>&euro; 12.00</p>
+										<p>/mese</p>
+									</div>
+									<ul class="features">
+										<li class="features__item">
+											<i class="fa-solid fa-user"></i>
+											1 utente
+										</li>
+										<li class="features__item">
+											<i class="fa-solid fa-folder"></i>
+											5 TB di spazio di archiviazione
+										</li>
+										<li class="features__item">
+											<i class="fa-solid fa-share-nodes"></i>
+											Funzioni di produttività premium e condivisione file
+											semplice e sicura
+										</li>
+									</ul>
+									<div class="card-plan__cta">
+										<a href="#" class="button">Prova gratis per 30 giorni</a>
+										<p>oppure <a href="#">acquista ora</a></p>
+									</div>
+									<div>
+										<h4 class="mb-10">Punti salienti del piano</h4>
+										<ul class="features blue-icons">
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Invia file fino a 100GB con Dropbox Transfert
+											</li>
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Cartelle offline su dispositivi mobile
+											</li>
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Invia file fino a 100GB con Dropbox Transfert
+											</li>
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Cartelle offline su dispositivi mobile
+											</li>
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Invia file fino a 100GB con Dropbox Transfert
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="col-4">
+							<div class="card card-plan">
+								<div class="card__header">
+									<i class="fa-solid fa-user"></i>Singolo
+								</div>
+								<div class="card__body">
+									<div class="card-plan__main-info">
+										<h3 class="card__title">Professional</h3>
+										<p>&euro; 12.00</p>
+										<p>/mese</p>
+									</div>
+									<ul class="features">
+										<li class="features__item">
+											<i class="fa-solid fa-user"></i>
+											1 utente
+										</li>
+										<li class="features__item">
+											<i class="fa-solid fa-folder"></i>
+											5 TB di spazio di archiviazione
+										</li>
+										<li class="features__item">
+											<i class="fa-solid fa-share-nodes"></i>
+											Funzioni di produttività premium e condivisione file
+											semplice e sicura
+										</li>
+									</ul>
+									<div class="card-plan__cta">
+										<a href="#" class="button">Contattaci</a>
+										<p>oppure <a href="#">acquista ora</a></p>
+									</div>
+									<div>
+										<h4 class="mb-10">Punti salienti del piano</h4>
+										<ul class="features blue-icons">
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Invia file fino a 100GB con Dropbox Transfert
+											</li>
+											<li class="features__item">
+												<i class="fa-solid fa-check"></i>
+												Cartelle offline su dispositivi mobile
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="col-12">
+							<div class="card card-plan card-plan--landscape">
+								<div class="card__header">
+									<i class="fa-solid fa-user"></i>Singolo
+								</div>
+								<div class="card__body">
+									<div class="row no-gutter">
+										<div class="col">
+											<h3 class="card__title">Professional</h3>
+											<h4 class="card__subtitle">
+												contatta l'ufficio vendite per i prezzi
+											</h4>
+											<p>
+												Lorem ipsum dolor sit amet consectetur adipisicing elit.
+												Eius repudiandae sapiente autem vitae explicabo.
+												Deserunt, amet vel.
+											</p>
+										</div>
+										<div class="col">
+											<a href="#" class="button"> Contatta l'ufficio ventide</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<!-- end plan section -->
 		</main>
 
 		<footer class="page-footer"></footer>
