ADD - correzione dropbox

--- a/correzioni/htmlcss-dropbox/index.html
+++ b/correzioni/htmlcss-dropbox/index.html
@@ -287,8 +287,305 @@
 				</div>
 			</section>
 			<!-- end plan section -->
+
+			<section class="section">
+				<div class="container">
+					<div class="row">
+						<div class="col-8">
+							<figure>
+								<img src="./img/partner.png" alt="" />
+							</figure>
+						</div>
+						<div class="col-4">
+							<h2 class="text-md">Entra in contatto con un partner Dropbox</h2>
+							<p>
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Eveniet dolorum laborum error quo neque sed voluptates
+								voluptatibus veritatis! Labore incidunt eveniet voluptatum non
+								rem nesciunt aspernatur pariatur nihil quas asperiores.
+							</p>
+							<a class="button button--outlined button--light" href="#"
+								>Trova un partner</a
+							>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<h2 class="title-lg">
+								Esegui più operazioni con Dropbox Business
+							</h2>
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-4">
+							<div class="card card-operation">
+								<figure class="card__header">
+									<img src="./img/business-feature-coordinate-it.png" alt="" />
+								</figure>
+								<div class="card__body">
+									<h3 class="card__title">Lorem ipsum dolor sit amet.</h3>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Tempore repellat nemo libero sequi tempora odio consectetur
+										voluptatum excepturi ea numquam!
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="card card-operation">
+								<figure class="card__header">
+									<img src="./img/business-feature-coordinate-it.png" alt="" />
+								</figure>
+								<div class="card__body">
+									<h3 class="card__title">Lorem ipsum dolor sit amet.</h3>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Tempore repellat nemo libero sequi tempora odio consectetur
+										voluptatum excepturi ea numquam!
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="card card-operation">
+								<figure class="card__header">
+									<img src="./img/business-feature-coordinate-it.png" alt="" />
+								</figure>
+								<div class="card__body">
+									<h3 class="card__title">Lorem ipsum dolor sit amet.</h3>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Tempore repellat nemo libero sequi tempora odio consectetur
+										voluptatum excepturi ea numquam!
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="card card-operation">
+								<figure class="card__header">
+									<img src="./img/business-feature-coordinate-it.png" alt="" />
+								</figure>
+								<div class="card__body">
+									<h3 class="card__title">Lorem ipsum dolor sit amet.</h3>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Tempore repellat nemo libero sequi tempora odio consectetur
+										voluptatum excepturi ea numquam!
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="card card-operation">
+								<figure class="card__header">
+									<img src="./img/business-feature-coordinate-it.png" alt="" />
+								</figure>
+								<div class="card__body">
+									<h3 class="card__title">Lorem ipsum dolor sit amet.</h3>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Tempore repellat nemo libero sequi tempora odio consectetur
+										voluptatum excepturi ea numquam!
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="card card-operation">
+								<figure class="card__header">
+									<img src="./img/business-feature-coordinate-it.png" alt="" />
+								</figure>
+								<div class="card__body">
+									<h3 class="card__title">Lorem ipsum dolor sit amet.</h3>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Tempore repellat nemo libero sequi tempora odio consectetur
+										voluptatum excepturi ea numquam!
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section>
+				<div class="section">
+					<div class="container">
+						<div class="row">
+							<div class="col-12">
+								<h2 class="title-lg">
+									Più di 500.000 team utilizzano Dropbox Business
+								</h2>
+								<a href="#">Scopri di più sui nostri clienti</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- <div class="debug"></div> -->
+				<div class="container-fluid carousel">
+					<div class="row no-gutter">
+						<div class="col-4">
+							<div class="row no-gutter">
+								<div class="col-6">
+									<div class="card card-logo bg-green">
+										<img src="./img/designit.svg" alt="" />
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="card card-logo bg-bordeaux">
+										<img src="./img/arizona_state_university.svg" alt="" />
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="card card-logo bg-dark-blue">
+										<img src="./img/university_of_florida.svg" alt="" />
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="card card-logo bg-red">
+										<img src="./img/topps.svg" alt="" />
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="carousel__details">
+								<figure class="detail__logo">
+									<img src="./img/designit.svg" alt="" />
+								</figure>
+
+								<blockquote>
+									<p>
+										"Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Expedita aspernatur eos porro quia quas doloribus,
+										temporibus voluptas ea sint perferendis a, nihil illo nemo
+										obcaecati odio fugit nisi voluptates reiciendis perspiciatis
+										minus, tempora ab exercitationem repudiandae. Vel magnam
+										soluta consequatur dicta mollitia nulla! Tenetur,
+										perspiciatis. Odio hic iste deleniti sunt!"
+									</p>
+									<footer>Morten Thomens, Global IT lead</footer>
+								</blockquote>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="row no-gutter">
+								<div class="col-6">
+									<div class="card card-logo bg-green">
+										<img src="./img/designit.svg" alt="" />
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="card card-logo bg-bordeaux">
+										<img src="./img/arizona_state_university.svg" alt="" />
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="card card-logo bg-dark-blue">
+										<img src="./img/university_of_florida.svg" alt="" />
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="card card-logo bg-red">
+										<img src="./img/topps.svg" alt="" />
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="section bg-light-blue">
+				<div class="container">
+					<div class="row">
+						<div class="col-8">
+							<h2 class="title-lg">
+								Porta Dropbox Business nella tua azienda.
+							</h2>
+						</div>
+						<div class="col-4">
+							<a href="#" class="button button--light"
+								>Inizia la tua prova gratuita</a
+							>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 
-		<footer class="page-footer"></footer>
+		<footer class="page-footer">
+			<div class="section">
+				<div class="container-lg">
+					<div class="row justify-between">
+						<div class="col">
+							<div class="widget-menu">
+								<h4>Dropbox</h4>
+								<ul class="footer-menu">
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col">
+							<div class="widget-menu">
+								<h4>Prodotti</h4>
+								<ul class="footer-menu">
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col">
+							<div class="widget-menu">
+								<h4>Azienda</h4>
+								<ul class="footer-menu">
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col">
+							<div class="widget-menu">
+								<h4>Supporto</h4>
+								<ul class="footer-menu">
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col">
+							<div class="widget-menu">
+								<h4>Community</h4>
+								<ul class="footer-menu">
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+									<li class="footer-menu__item"><a href="">ciao</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
