ADD - media query example

--- a/correzioni/htmlcss-dropbox/index.html
+++ b/correzioni/htmlcss-dropbox/index.html
@@ -18,6 +18,7 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="./css/app.css" />
+		<link rel="stylesheet" href="./css/responsive.css" />
 	</head>
 	<body>
 		<!-- <div class="debug"></div> -->
@@ -288,7 +289,7 @@
 			</section>
 			<!-- end plan section -->
 
-			<section class="section">
+			<section class="section partner">
 				<div class="container">
 					<div class="row">
 						<div class="col-8">
@@ -312,7 +313,7 @@
 				</div>
 			</section>
 
-			<section class="section">
+			<section class="section operations">
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
