ADD - correzione responsive

--- a/correzioni/htmlcss-responsive-layout/index.html
+++ b/correzioni/htmlcss-responsive-layout/index.html
@@ -42,6 +42,7 @@
 		</header>
 		<!-- main -->
 		<main>
+			<!-- inizio hero -->
 			<section class="hero">
 				<div class="container">
 					<div class="row">
@@ -116,6 +117,112 @@
 					</div>
 				</div>
 			</section>
+			<!-- fine hero -->
+
+			<!-- inizio strategic planning -->
+			<section class="strategic">
+				<div class="container-small">
+					<div class="row">
+						<div class="col-6">
+							<figure>
+								<img src="./img/planning1.png" alt="" />
+							</figure>
+
+							<h2 class="text-md">Strategic planning</h2>
+							<p>
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa
+								unde ea molestiae! Illo beatae, nisi repudiandae magni iure
+								optio qui a esse unde non modi, sunt alias ullam rem itaque!
+							</p>
+						</div>
+						<div class="col-6 self-end">
+							<div class="card card-development">
+								<figure class="card__featured-image">
+									<img src="./img/planning2.png" alt="" />
+								</figure>
+								<h3 class="card__title">App development</h3>
+								<p class="card__description">
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Eligendi modi eum autem quae quas est consectetur laboriosam
+									amet impedit quaerat?
+								</p>
+								<a href="#" class="button button--circle button--purple">
+									<i class="fa-solid fa-arrow-down"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- fine strategic planning -->
+
+			<!-- inizio testimonials -->
+			<section class="testimonials">
+				<div class="container">
+					<div class="row section-intro">
+						<div class="col-12">
+							<p>Testimonials</p>
+							<h2 class="text-lg">We arte committed expert partners</h2>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum
+								deleniti, recusandae ullam animi nisi numquam ipsa tempore quia
+								odit laudantium.
+							</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12">
+							<div class="card card-testimonial">
+								<figure class="card__featured-image">
+									<img src="./img/testimonial1.jpg" alt="" />
+								</figure>
+								<div class="card__content">
+									<p class="testimonial__cite">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Saepe molestias et dolor nemo sed, sit minus tempora
+										perferendis velit, ducimus dicta laborum, itaque accusamus
+										asperiores culpa quidem distinctio delectus fuga.
+									</p>
+									<h4 class="testinomial__name">Nome congome</h4>
+								</div>
+							</div>
+						</div>
+						<div class="col-12">
+							<div class="card card-testimonial">
+								<figure class="card__featured-image">
+									<img src="./img/testimonial1.jpg" alt="" />
+								</figure>
+								<div class="card__content">
+									<p class="testimonial__cite">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Saepe molestias et dolor nemo sed, sit minus tempora
+										perferendis velit, ducimus dicta laborum, itaque accusamus
+										asperiores culpa quidem distinctio delectus fuga.
+									</p>
+									<h4 class="testinomial__name">Nome congome</h4>
+								</div>
+							</div>
+						</div>
+						<div class="col-12">
+							<div class="card card-testimonial">
+								<figure class="card__featured-image">
+									<img src="./img/testimonial1.jpg" alt="" />
+								</figure>
+								<div class="card__content">
+									<p class="testimonial__cite">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Saepe molestias et dolor nemo sed, sit minus tempora
+										perferendis velit, ducimus dicta laborum, itaque accusamus
+										asperiores culpa quidem distinctio delectus fuga.
+									</p>
+									<h4 class="testinomial__name">Nome congome</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- fine testimonials -->
 		</main>
 		<!-- footer -->
 		<footer></footer>
