ADD - correzione content

--- a/correzioni/html-css-spotifyweb/index.html
+++ b/correzioni/html-css-spotifyweb/index.html
@@ -19,7 +19,7 @@
 		/>
 		<link rel="stylesheet" href="./css/app.css" />
 	</head>
-	<body class="debug">
+	<body class="debu">
 		<div id="app" class="flex flex-column">
 			<div class="app__content grow-1 flex">
 				<header class="app__sidebar flex flex-column">
@@ -96,7 +96,171 @@
 						</a>
 					</div>
 				</header>
-				<main class="app__main-content grow-1">contenuto</main>
+				<main class="app__main-content grow-1">
+					<div class="upgrade-banner">
+						<a href="#" class="upgrade-cta">Effettua l'upgrade</a>
+					</div>
+
+					<div class="content">
+						<ul class="categories-list flex justify-center items-center">
+							<li class="category active"><a href="#">In evidenza</a></li>
+							<li class="category"><a href="#">Podcast</a></li>
+							<li class="category"><a href="#">Classifiche</a></li>
+							<li class="category"><a href="#">Generi e mood</a></li>
+							<li class="category"><a href="#">Nuove uscite</a></li>
+							<li class="category"><a href="#">Scopri</a></li>
+						</ul>
+
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-12">
+									<h2 class="category-title">Recently played</h2>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image">
+											<span class="overlay">
+												<i class="fa-solid fa-play"></i>
+											</span>
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image">
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image">
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image">
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image">
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image">
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-12">
+									<h2 class="category-title">Recently played</h2>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image">
+											<span class="overlay">
+												<i class="fa-solid fa-play"></i>
+											</span>
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image">
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-12">
+									<h2 class="category-title">Recently played</h2>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image circle">
+											<span class="overlay">
+												<i class="fa-solid fa-play"></i>
+											</span>
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-2">
+									<div class="card card-album">
+										<div class="card__featured-image circle">
+											<img src="./img/metal_lifting.jpg" alt="" />
+										</div>
+										<div class="card__body">
+											<h4 class="card__title">Heavy Metal</h4>
+											<p class="card__subtitle">subtitle</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</main>
 			</div>
 			<aside class="app__toolbar flex items-center justify-between">
 				<div class="album-preview flex items-center">
