--- a/bootstrap-start/index.html
+++ b/bootstrap-start/index.html
@@ -50,13 +50,56 @@
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<div class="card">card</div>
+						<div class="card card-concert">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text">
+									Some quick example text to build on the card title and make up
+									the bulk of the card's content.
+								</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+							<img
+								src="https://picsum.photos/600/300"
+								class="card-img-bottom"
+								alt="..."
+							/>
+						</div>
 					</div>
 					<div class="col-5">
-						<div class="card">card</div>
+						<div class="card">
+							<img
+								src="https://picsum.photos/600/300"
+								class="card-img-top"
+								alt="..."
+							/>
+							<div class="card-body px-5">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text">
+									Some quick example text to build on the card title and make up
+									the bulk of the card's content.
+								</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+							<div class="card-footer text-body-secondary">2 days ago</div>
+						</div>
 					</div>
 					<div class="col">
-						<div class="card">card</div>
+						<div class="card">
+							<img
+								src="https://picsum.photos/600/300"
+								class="card-img-top"
+								alt="..."
+							/>
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text">
+									Some quick example text to build on the card title and make up
+									the bulk of the card's content.
+								</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -64,38 +107,199 @@
 			<div class="container">
 				<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
 					<div class="col">
-						<div class="card">card</div>
+						<div class="card">
+							<div class="card">
+								<img
+									src="https://picsum.photos/600/300"
+									class="card-img-top"
+									alt="..."
+								/>
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make
+										up the bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+								<img
+									src="https://picsum.photos/600/300"
+									class="card-img-top"
+									alt="..."
+								/>
+							</div>
+						</div>
 					</div>
 					<div class="col">
-						<div class="card">card</div>
+						<div class="card">
+							<div class="card">
+								<div class="card">
+									<img
+										src="https://picsum.photos/600/300"
+										class="card-img-top"
+										alt="..."
+									/>
+									<div class="card-body">
+										<h5 class="card-title">Card title</h5>
+										<p class="card-text">
+											Some quick example text to build on the card title and
+											make up the bulk of the card's content.
+										</p>
+										<a href="#" class="btn btn-primary">Go somewhere</a>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="col">
-						<div class="card">card</div>
+						<div class="card">
+							<div class="card">
+								<img
+									src="https://picsum.photos/600/300"
+									class="card-img-top"
+									alt="..."
+								/>
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make
+										up the bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="col">
-						<div class="card">card</div>
+						<div class="card">
+							<div class="card">
+								<img
+									src="https://picsum.photos/600/300"
+									class="card-img-top"
+									alt="..."
+								/>
+								<div class="card-body">
+									<h5 class="card-title">Card title</h5>
+									<p class="card-text">
+										Some quick example text to build on the card title and make
+										up the bulk of the card's content.
+									</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="container">
+			<div class="container py-5">
 				<div class="row">
 					<div class="col-12">
-						<form action="">
-							<input type="text" placeholder="Name" />
-							<input type="email" placeholder="Email address" />
-							<input type="text" placeholder="Phone number" />
-							<textarea
-								name=""
-								id=""
-								cols="30"
-								rows="10"
-								placeholder="Message"
-							></textarea>
-						</form>
+						<div class="accordion" id="accordionExample">
+							<div class="accordion-item">
+								<h2 class="accordion-header">
+									<button
+										class="accordion-button"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#collapseOne"
+										aria-expanded="true"
+										aria-controls="collapseOne"
+									>
+										Accordion Item #1
+									</button>
+								</h2>
+								<div
+									id="collapseOne"
+									class="accordion-collapse collapse show"
+									data-bs-parent="#accordionExample"
+								>
+									<div class="accordion-body">
+										<strong>This is the first item's accordion body.</strong> It
+										is shown by default, until the collapse plugin adds the
+										appropriate classes that we use to style each element. These
+										classes control the overall appearance, as well as the
+										showing and hiding via CSS transitions. You can modify any
+										of this with custom CSS or overriding our default variables.
+										It's also worth noting that just about any HTML can go
+										within the <code>.accordion-body</code>, though the
+										transition does limit overflow.
+									</div>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<h2 class="accordion-header">
+									<button
+										class="accordion-button collapsed"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#collapseTwo"
+										aria-expanded="false"
+										aria-controls="collapseTwo"
+									>
+										Accordion Item #2
+									</button>
+								</h2>
+								<div
+									id="collapseTwo"
+									class="accordion-collapse collapse"
+									data-bs-parent="#accordionExample"
+								>
+									<div class="accordion-body">
+										<strong>This is the second item's accordion body.</strong>
+										It is hidden by default, until the collapse plugin adds the
+										appropriate classes that we use to style each element. These
+										classes control the overall appearance, as well as the
+										showing and hiding via CSS transitions. You can modify any
+										of this with custom CSS or overriding our default variables.
+										It's also worth noting that just about any HTML can go
+										within the <code>.accordion-body</code>, though the
+										transition does limit overflow.
+									</div>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<h2 class="accordion-header">
+									<button
+										class="accordion-button collapsed"
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#collapseThree"
+										aria-expanded="false"
+										aria-controls="collapseThree"
+									>
+										Accordion Item #3
+									</button>
+								</h2>
+								<div
+									id="collapseThree"
+									class="accordion-collapse collapse"
+									data-bs-parent="#accordionExample"
+								>
+									<div class="accordion-body">
+										<strong>This is the third item's accordion body.</strong> It
+										is hidden by default, until the collapse plugin adds the
+										appropriate classes that we use to style each element. These
+										classes control the overall appearance, as well as the
+										showing and hiding via CSS transitions. You can modify any
+										of this with custom CSS or overriding our default variables.
+										It's also worth noting that just about any HTML can go
+										within the <code>.accordion-body</code>, though the
+										transition does limit overflow.
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</main>
+
+		<!-- includiamo il js -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
